--- a/src/app/modules/timetracker/components/calendar/calendar.component.html
+++ b/src/app/modules/timetracker/components/calendar/calendar.component.html
@@ -13,6 +13,8 @@
         </mwl-calendar-month-view>
         <mwl-calendar-week-view
                 *ngSwitchCase="CalendarView.Week"
+                [dayEndHour]="18"
+                [dayStartHour]="8"
                 [viewDate]="viewDate"
                 [events]="events"
                 [refresh]="refresh"
