--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,4 @@
-<h1>Angular Material Application</h1>
+<h1>Welcome to the TimeTracker</h1>
+<p class="hero">Here you can enter the worked hours on a daily basis for each of your participating projects.</p>
+
+
