--- a/src/app/modules/timetracker/components/calendar/calendar.component.html
+++ b/src/app/modules/timetracker/components/calendar/calendar.component.html
@@ -6,6 +6,7 @@
                 [events]="events"
                 [refresh]="refresh"
                 [activeDayIsOpen]="activeDayIsOpen"
+                (dblclick)="$event.preventDefault(); doubleClick.emit()"
                 (dayClicked)="dayClicked.emit($event.day)"
                 (eventClicked)="eventClicked.emit($event.event)"
                 (eventTimesChanged)="eventTimesChanged.emit($event)"
@@ -18,6 +19,7 @@
                 [viewDate]="viewDate"
                 [events]="events"
                 [refresh]="refresh"
+                (dblclick)="$event.preventDefault(); doubleClick.emit()"
                 (eventClicked)="eventClicked.emit($event.event)"
                 (eventTimesChanged)="eventTimesChanged.emit($event)"
         >
@@ -29,6 +31,7 @@
                 [viewDate]="viewDate"
                 [events]="events"
                 [refresh]="refresh"
+                (dblclick)="$event.preventDefault(); doubleClick.emit()"
                 (eventClicked)="eventClicked.emit($event.event)"
                 (eventTimesChanged)="eventTimesChanged.emit($event)"
         >
