Add preferences dialog and dark theme

--- a/src/app/modules/timetracker/components/events/events.component.html
+++ b/src/app/modules/timetracker/components/events/events.component.html
@@ -60,7 +60,7 @@
                         <td>
                             <mat-form-field appearance="fill">
                                 <mat-label>Assignment type</mat-label>
-                                <input matInput [value]="event.meta?.assignmentType">
+                                <input matInput [value]="event.meta?.task?.name">
                             </mat-form-field>
                         </td>
                         <td>
