--- a/src/app/styles/_theme.scss
+++ b/src/app/styles/_theme.scss
@@ -23,23 +23,8 @@ $dark-theme: mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
 @include angular-material-theme($light-theme);
 
 //$custom-background-color: #273238;
-$custom-background-color: map_get($mat-blue-grey, 900);
+$custom-background-color: map_get($mat-dark-theme-background, background);
 
-$background: map-get($dark-theme, background);
-$background: map_merge($background, (background: $custom-background-color));
-$dark-theme: map_merge($dark-theme, (background: $background));
-
-.darkMode {
-  @include angular-material-color($dark-theme);
-}
-
-.darkMode {
-  .container {
-    background-color: $custom-background-color;
-    height: 100%;
-  }
-
-  h1 {
-    color: white;
-  }
-}
+//$background: $mat-dark-theme-background;
+//$background: map_merge($background, (background: $custom-background-color));
+//$dark-theme: map_merge($dark-theme, (background: $background));
