--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,18 +1,17 @@
 h1 {
   margin-top: 24px;
   text-align: center;
-
   color: #0272B1;
-    font-family: "Lato", Lato, Sans-serif;
-    font-size: 56px;
-    font-weight: 900;
-    line-height: 1.1em;
+  font-family: "Lato", Lato, sans-serif;
+  font-size: 56px;
+  font-weight: 900;
+  line-height: 1.1em;
 }
 
 p.hero {
   text-align: center;
   color: #1F2041;
-  font-family: "Lato", Lato, Sans-serif;
+  font-family: "Lato", Lato, sans-serif;
   font-size: 20px;
   line-height: 1.4em;
 }
