--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,6 +1,12 @@
+@import 'src/app/styles/theme';
+
+.login {
+  padding-top: 64px;
+}
+
 mat-card {
   max-width: 400px;
-  margin: 2em auto;
+  margin: 0 auto;
   text-align: center;
 }
 
