Extracted parent class

--- a/src/app/modules/timetracker/components/calendar/calendar.component.html
+++ b/src/app/modules/timetracker/components/calendar/calendar.component.html
@@ -1,4 +1,4 @@
-<div class="cal-container">
+<div class="cal-container mat-elevation-z1">
     <div [ngSwitch]="view">
         <mwl-calendar-month-view
                 *ngSwitchCase="CalendarView.Month"
