Add persistance to events

--- a/src/app/modules/timetracker/components/calendar/calendar.component.html
+++ b/src/app/modules/timetracker/components/calendar/calendar.component.html
@@ -91,5 +91,5 @@
 <ng-template
     #eventTitleTemplate
     let-event="event">
-    {{ event.meta.task.category }} - {{ event.meta.task.name }} - {{ event.title }}
+    {{ event.title }}
 </ng-template>
