--- a/src/app/modules/timetracker/components/event-editor/event-editor.component.html
+++ b/src/app/modules/timetracker/components/event-editor/event-editor.component.html
@@ -77,5 +77,5 @@
 </div>
 <div mat-dialog-actions>
     <button mat-button (click)="onNoClick()">Cancel</button>
-    <button mat-button [mat-dialog-close]="data.event">Ok</button>
+    <button mat-button (click)="submitForm(null)">Ok</button>
 </div>
