Add toolbar in events

--- a/src/app/modules/timetracker/components/container/container.component.html
+++ b/src/app/modules/timetracker/components/container/container.component.html
@@ -19,5 +19,5 @@
                  [viewDate]="viewDate"
                  [refresh]="refresh"
                  (deleteEvent)="deleteEvent($event)"
-                 (addEvent)="addEvent()">
+                 (addEvent)="createEvent()">
 </app-time-events>
