--- a/src/app/modules/timetracker/components/events/events.component.scss
+++ b/src/app/modules/timetracker/components/events/events.component.scss
@@ -35,3 +35,10 @@
   font-size: 1.25rem;
   font-weight: 500;
 }
+
+.toolbar {
+  padding: 16px 0;
+  border-bottom: 1px solid #ddd;
+  margin-bottom: 16px;
+  border-top: 1px solid #ddd;
+}
